--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Association for Women in Computing</title>
+    <link rel="stylesheet" href="CSS/style.css">
+</head>
+
+<body>
+    <div id="side-nav" class="nav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Home</a>
+        <a href="HTML/about.html">About Us</a>
+        <a href="HTML/events.html">Events</a>
+        <a href="HTML/opportunities.html">Opportunities</a>
+        <a href="https://gobblerconnect.vt.edu/organization/awc" target="_blank">GobblerConnect</a>
+    </div>
+
+    <div id="nav-button">
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    </div>
+
+    <div id="home">
+        <img src="Images/AWCLogo.png" alt="AWC logo">
+        <h1>The Association for Women in Computing @ Virginia Tech</h1>
+    </div>
+    <main>
+        <div>
+            <h1>The Association for Women in Computing is a student-run, non-profit organization at Virginia Tech.</h1>
+            <p>
+                For over <b>20 years</b>, we have worked to promote the recruitment and retention of women in
+                technology-
+                and
+                computer-oriented professions. This mission is more critical now than ever, as the number of women
+                pursuing
+                Computer Science degrees has fallen below <b>10% nationally</b>, and below <b>5% at Virginia Tech</b>.
+                Toward restoring
+                diversity, we work with the close support of the Department of Computer Science, affiliated CSRC and
+                other
+                IT companies, and the College of Engineering.
+            </p>
+            <p>Our organization is comprised of undergraduate, graduate, and faculty members from various disciplines.
+                Most
+                of AWC’s members are Computer Science majors, but we also have Computer Science minors, Computer
+                Engineering
+                and BIT majors, and a variety of members from other disciplines. Anyone and everyone is welcome at AWC —
+                you
+                don’t have to be a woman in computing to join, you just have to like them!
+            </p>
+            <p>AWC is involved in many different activities that are designed to foster professional development and
+                contribute to the local community. We also have many social activities to help build an enduring sense
+                of
+                community. You can find out more about what we do on our <a href="events.html">Events</a> page, and if
+                you’d
+                like to support our
+                efforts, please <a href="awc-g@vt.edu">contact us</a>. And, if you have any questions at all, please
+                feel
+                free to <a href="awc-g@vt.edu">contact us</a>!
+            </p>
+        </div>
+        <div id="what-we-do">
+            <h2>What We Do</h2>
+            <p><b>GBMs, Workshops, & "Open Hours"</b></p>
+            <p><b>Each month</b> AWC hosts general body meetings, workshops, and what we like to call "open hours".</p>
+            <p>
+                General body meetings are when members have the opportunity to network and stay up to date about
+                upcoming
+                AWC
+                events. Workshops allow for members to grow professionally and build technical skills. "Open hours" are
+                sessions held for mentor-mentee interaction, socialization, and academic support.
+            </p>
+        </div>
+        <div class="section-divider">
+            <h1>Get Involved</h1>
+        </div>
+        <div id="join-us">
+            <h2>Join Us!</h2>
+            <p>
+                If you want to be part of AWC, just stop by one of our meetings or events and talk to us! If you have
+                questions, feel free to <a href="awc-g@vt.edu">contact us</a>. Remember, <b>you don’t have to be a
+                    woman</b>
+                to join AWC! Only a wanting to support women in computing is required!
+            </p>
+            <p id="vt-email">Join the listserv (using your vt.edu email) to stay updated and become a member of the
+                club!
+            </p>
+            <div id="email-button">
+                <button><a
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSeEVBfv8W_eD6-ge61FeiniT-Qaw10LNzQzOJtvVXIhQ9iMNA/viewform"
+                        target="_blank">Join our mailing list!</a></button>
+            </div>
+        </div>
+        <div id="already-a-member">
+            <h2>Already a Member?</h2>
+            <p id="want-more">…and want to do more? There are several ways you can help out:</p>
+            <ul>
+                <li>
+                    Volunteer. We are always participating in several events throughout the campus, and we always need
+                    volunteers
+                    to represent our club. Stay tuned to our <a
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSeEVBfv8W_eD6-ge61FeiniT-Qaw10LNzQzOJtvVXIhQ9iMNA/viewform"
+                        target="_blank">listserv</a> to learn about the latest opportunities.
+                </li>
+                <li>
+                    Consider becoming an officer. You will be responsible for one area of our club. If there is <a
+                        href="about.html">already an officer</a> for a position you want to help, you can be a “shadow”,
+                    helping the current officer do
+                    her
+                    job and
+                    learning about it, then next year you can assume that position. If there isn’t a position for what
+                    you
+                    want
+                    to do, just talk to us…we can create a new position just for you!
+                </li>
+            </ul>
+        </div>
+    </main>
+    <footer>
+        <a href="https://linktr.ee/vt_awc" target="_blank"><img src="Images/Linktree.png" alt="Linktree logo"></a>
+        <p>Made with 💙 by AWC Webmasters</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
