Update links on home page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p>AWC is involved in many different activities that are designed to foster professional development and
                 contribute to the local community. We also have many social activities to help build an enduring sense
                 of
-                community. You can find out more about what we do on our <a href="events.html">Events</a> page, and if
+                community. You can find out more about what we do on our <a href="HTML/events.html">Events</a> page, and if
                 you’d
                 like to support our
                 efforts, please <a href="awc-g@vt.edu">contact us</a>. And, if you have any questions at all, please
@@ -106,7 +106,7 @@
                 </li>
                 <li>
                     Consider becoming an officer. You will be responsible for one area of our club. If there is <a
-                        href="about.html">already an officer</a> for a position you want to help, you can be a “shadow”,
+                        href="HTML/about.html">already an officer</a> for a position you want to help, you can be a “shadow”,
                     helping the current officer do
                     her
                     job and
