Updated website with FAQ and officer board page

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -14,6 +14,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
+        <a href="officers.html">Officer Board</a>
         <a href="events.html">Events</a>
         <a href="opportunities.html">Opportunities</a>
         <a href="https://gobblerconnect.vt.edu/organization/awc" target="_blank">GobblerConnect</a>
@@ -27,122 +28,96 @@
         <h2>About Us</h2>
     </header>
     <main>
-        <h1>Leadership Team 2023 - 2024</h1>
-        <div class="layout">
-            <div class="card">
-                <img src="../Images/Leadership/shreya-k.png" alt="shreya-k" style="height: 175px;">
-                <div class="info">
-                    <p><b>Shreya Kodali</b><br>President</p>
-                </div>
+        <div>
+            <h1>The Association for Women in Computing is a student-run, non-profit organization at Virginia Tech.</h1>
+            <p>
+                For over <b>20 years</b>, we have worked to promote the recruitment and retention of women in
+                technology-
+                and
+                computer-oriented professions. This mission is more critical now than ever, as the percentage of women
+                pursuing a Computer Science degree is less than <b>25% nationally</b>, and below <b>25% at Virginia Tech</b>.
+                Toward restoring
+                diversity, we work with the close support of the Department of Computer Science, affiliated CSRC and
+                other
+                IT companies, and the College of Engineering.
+            </p>
+            <p>Our organization is comprised of undergraduate, graduate, and faculty members from various disciplines.
+                Most
+                of AWC’s members are Computer Science majors, but we also have Computer Science minors, Computer
+                Engineering
+                and BIT majors, and a variety of members from other disciplines. Anyone and everyone is welcome at AWC —
+                you
+                don’t have to be a woman in computing to join, you just have to like them!
+            </p>
+            <p>AWC is involved in many different activities that are designed to foster professional development and
+                contribute to the local community. We also have many social activities to help build an enduring sense
+                of
+                community. You can find out more about what we do on our <a href="events.html">Events</a> page, and
+                if
+                you’d
+                like to support our
+                efforts, please <a href="mailto:awc-g@vt.edu">contact us</a>. And, if you have any questions at all,
+                please
+                feel
+                free to <a href="mailto:awc-g@vt.edu">contact us</a>!
+            </p>
+        </div>
+        <div id="what-we-do">
+            <h2>What We Do</h2>
+            <p><b>GBMs, Workshops, & "Open Hours"</b></p>
+            <p><b>Each month</b> AWC hosts general body meetings, workshops, and what we like to call "open hours".</p>
+            <p>
+                General body meetings are when members have the opportunity to network and stay up to date about
+                upcoming
+                AWC
+                events. Workshops allow for members to grow professionally and build technical skills. "Open hours" are
+                sessions held for mentor-mentee interaction, socialization, and academic support.
+            </p>
+        </div>
+        <div class="section-divider">
+            <h1>Get Involved</h1>
+        </div>
+        <div id="join-us">
+            <h2>Join Us!</h2>
+            <p>
+                If you want to be part of AWC, just stop by one of our meetings or events and talk to us! If you have
+                questions, feel free to <a href="mailto:awc-g@vt.edu">contact us</a>. Remember, <b>you don’t have to be a
+                    woman</b>
+                to join AWC! Only a wanting to support women in computing is required!
+            </p>
+            <p id="vt-email">Join the listserv (using your vt.edu email) to stay updated and become a member of the
+                club!
+            </p>
+            <div id="email-button">
+                <button><a
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSeEVBfv8W_eD6-ge61FeiniT-Qaw10LNzQzOJtvVXIhQ9iMNA/viewform"
+                        target="_blank">Join our mailing list!</a></button>
             </div>
-            <div class="card">
-                <img src="../Images/Leadership/ruwaa-a.png" alt="ruwaa-a" style="height: 175px;">
-                <div class="info">
-                    <p><b>Ruwaa Abu-Ageel</b><br>Vice President</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/travis-c.png" alt="travis-c" style="height: 175px;">
-                <div class="info">
-                    <p><b>Travis Chan</b><br>Webmaster</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/ishita-g.png" alt="ishita-g" style="height: 175px;">
-                <div class="info">
-                    <p><b>Ishita Gupta</b><br>Webmaster</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/olivia-c.png" alt="olivia-c" style="height: 175px;">
-                <div class="info">
-                    <p><b>Olivia Chan</b><br>Public Relations Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/sara-a.png" alt="sara-a" style="height: 175px;">
-                <div class="info">
-                    <p><b>Sara Abbas</b><br>Public Relations Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/shivani-v.png" alt="shivani-v" style="height: 175px;">
-                <div class="info">
-                    <p><b>Shivani Vaddepalli</b><br>Public Relations Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/vivien-p.png" alt="vivien-p" style="height: 175px;">
-                <div class="info">
-                    <p><b>Vivien Peng</b><br>HackViolet Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/haritha-c.png" alt="haritha-c" style="height: 175px;">
-                <div class="info">
-                    <p><b>Haritha Chode</b><br>HackViolet Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/abia-z.png" alt="abia-z" style="height: 175px;">
-                <div class="info">
-                    <p><b>Abia Zahir</b><br>Women in Computing Day Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/nethra-r.png" alt="nethra-r" style="height: 175px;">
-                <div class="info">
-                    <p><b>Nethra Rajeshkumar</b><br>Women in Computing Day Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/prapti-s.png" alt="prapti-s" style="height: 175px;">
-                <div class="info">
-                    <p><b>Prapti Singh</b><br>Treasurer</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/varsha-m.png" alt="varsha-m" style="height: 175px;">
-                <div class="info">
-                    <p><b>Varsha Manickam</b><br>Treasurer</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/tanisi-t.png" alt="tanisi-t" style="height: 175px;">
-                <div class="info">
-                    <p><b>Tanisi Tripathi</b><br>SEC Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/krish-g.png" alt="krish-g" style="height: 175px;">
-                <div class="info">
-                    <p><b>Krish Ganotra</b><br>Conference Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/mary-z.png" alt="mary-z" style="height: 175px;">
-                <div class="info">
-                    <p><b>Mary Zeno</b><br>Conference Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/nandini-y.png" alt="nandini-y" style="height: 175px;">
-                <div class="info">
-                    <p><b>Nandini Yella</b><br>Outreach Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/shivani-k.png" alt="shivani-k" style="height: 175px;">
-                <div class="info">
-                    <p><b>Shivani Kumar</b><br>Conference Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/hafsa-k.png" alt="hafsa-k" style="height: 175px;">
-                <div class="info">
-                    <p><b>Hafsa Khan</b><br>CAMEO Chair</p>
-                </div>
-            </div>
+        </div>
+        <div id="already-a-member">
+            <h2>Already a Member?</h2>
+            <p id="want-more">…and want to do more? There are several ways you can help out:</p>
+            <ul>
+                <li>
+                    Volunteer. We are always participating in several events throughout the campus, and we always need
+                    volunteers
+                    to represent our club. Stay tuned to our <a
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSeEVBfv8W_eD6-ge61FeiniT-Qaw10LNzQzOJtvVXIhQ9iMNA/viewform"
+                        target="_blank">listserv</a> to learn about the latest opportunities.
+                </li>
+                <li>
+                    Consider becoming an officer. You will be responsible for one area of our club. If there is <a
+                        href="officers.html">already an officer</a> for a position you want to help, you can be a
+                    “shadow”,
+                    helping the current officer do
+                    her
+                    job and
+                    learning about it, then next year you can assume that position. If there isn’t a position for what
+                    you
+                    want
+                    to do, just talk to us…we can create a new position just for you!
+                </li>
+            </ul>
         </div>
     </main>
     <footer>
