--- a/HTML/events.html
+++ b/HTML/events.html
@@ -14,6 +14,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
+        <a href="officers.html">Officer Board</a>
         <a href="events.html">Events</a>
         <a href="opportunities.html">Opportunities</a>
         <a href="https://gobblerconnect.vt.edu/organization/awc" target="_blank">GobblerConnect</a>
@@ -43,15 +44,15 @@
             <h2>HackViolet</h2>
             <p>HackViolet (previously known as SheHacksVT) is the fourth annual female-empowerment hackathon hosted at VT! Hackers of all genders are invited to innovate, create, and inspire with code. Opportunity to network, meet like-minded students and receive swag and prizes. No experience necessary; open to all majors!  Learn more at hackviolet.com!</p>
             <p><b>When?</b></p>
-            <p>February 3-4, 2024</p>
+            <p>TBA</p>
             <p><b>Who can particiapte?</b></p>
             <p>Undergraduate, and graduate students of all genders are welcome! Open to all majors and no experience needed!</p>
             <p><b>Questions?</b></p>
-            <p>Contact <b><a href="hackvioletvt@gmail.com">hackvioletvt@gmail.com</a></b></p>
+            <p>Contact <b><a href="mailto:hackvioletvt@gmail.com">hackvioletvt@gmail.com</a></b></p>
         </div>
         <div>
             <h2>Grace Hopper Celebration of Women in Computing</h2>
-            <p>Every year, the AWC sends some members to the <a href="https://ghc.anitab.org">Grace Hopper Celebration of Women in Computing (GHC)</a>!  An energetic and inspirational celebration of women in computing, the GHC is designed to bring together women in computing related careers. This conference provides a forum for sharing research, providing mentorship, and empowering the next generation of women in computing.</p>
+            <p>Every year, the AWC sends some members to the <a href="https://ghc.anitab.org" target="_blank">Grace Hopper Celebration of Women in Computing (GHC)</a>!  An energetic and inspirational celebration of women in computing, the GHC is designed to bring together women in computing related careers. This conference provides a forum for sharing research, providing mentorship, and empowering the next generation of women in computing.</p>
             <b><p style="text-align: center;">But wait! Can <i>I</i> go to this amazing conference?</p></b>
             <p>If you want to attend Grace Hopper conference with us, get involved with AWC! AWC tries to provide several Grace Hopper Conference scholarships (courtesy of the CS Department) to active members who attend meetings and events. Attendance is our biggest consideration when choosing people to go!</p>
         </div>
