--- a/HTML/opportunities.html
+++ b/HTML/opportunities.html
@@ -14,6 +14,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="../index.html">Home</a>
         <a href="about.html">About Us</a>
+        <a href="officers.html">Officer Board</a>
         <a href="events.html">Events</a>
         <a href="opportunities.html">Opportunities</a>
         <a href="https://gobblerconnect.vt.edu/organization/awc" target="_blank">GobblerConnect</a>
@@ -28,34 +29,6 @@
     </header>
     <main>
         <h1>Job Opportunities</h1>
-        <div class="center">
-            <h2>CoStar Group</h2>
-            <p><b>Software Development Full Time and Internships</b>
-                Excited to share that our full time and internship software development roles have been posted on Handshake! We can’t wait to start hiring Hokies to join our Richmond, VA CoStar teams. Early applicants can interview as soon as September 8.</p>
-            <p>Apply <b><a href="https://app.joinhandshake.com/stu/employers/27159#jobs">here</a></b> on Handshake</p>
-        </div>
-        <div class="center">
-            <h2>Eastern Research Group</h2>
-            <p>ERG is a multidisciplinary consulting firm offering a broad range of professional services. We assist our clients in analyzing pollutant releases, evaluating public health risks, assessing appropriate and cost-effective control technologies, and utilizing green design and sustainable development strategies.</p>
-            <p>Degrees sought include but are not limited to: chemical, civil, environmental, and fire protection engineering, environmental resource management, biology, and chemistry.</p>
-            <p>Apply for a position <b><a href="https://jobs.localjobnetwork.com/j/75226003">here</a></b>!</p>
-        </div>
-        <div class="center">
-            <h2>Dominion Energy Virginia's Immersive Career Experience Program</h2>
-            <p>Dominion Energy is a leading energy company that offers innovative solutions and services in the electric transmission sector, providing immersive career experiences for engineering students to gain hands-on expertise. They are committed to shaping the future of energy while fostering professional development through programs like DEVICE.</p>
-            <p>Dominion Energy is looking for college students studying engineering (like electrical, mechanical, or civil) to join their hands-on Immersive Career Experience (DEVICE) program. They're especially interested in those graduating between December 2023 and August 31st, 2024.</p>
-            <p>Apply for a position <b><a href="https://careers.dominionenergy.com/job/GLEN-ALLEN-DEV-Immersive-Career-Experience-Electric-Transmission-Engineer-I-VA-23060/1069264600/">here</a></b>!</p>
-        </div>
-        <div class="center">
-            <h2>Investment Banking Group Recruitment</h2>
-            <p>The Investment Banking Group has begun recruiting for its Fall 2023 trainee program. The group is open to sophomores of all majors. The Investment Banking Group provides extensive training in financial modeling and presentation skills, which will give you the necessary tools needed to succeed in Investment Banking, Private Equity, Hedge Funds, and more. We also offer technical preparation for interviews, providing members with an advantage when navigating their own recruitment processes. Furthermore, you will have the chance to interact with alumni who have been successful in these fields, offering some of the most valuable networking opportunities to be found through an on-campus organization.</p>
-            <p>Apply <b><a href="https://www.ibgvt.com/apply-1">here</a></b>!</p>
-        </div>
-        <div class="center">
-            <h2>Coding It Forward Fellowship</h2>
-            <p>Coding It Forward is a 501(c)3 nonprofit for early-career technologists creating new pathways into public interest technology. They are looking for current and recent students to participate in the Coding it Forward Fellowship, a paid, 10-week summer fellowship that empowers early-career technologists to innovate in local, state, and federal government offices across the United States. Applications open on October 16.</p>
-            <p>For more information about their incoming information session, click <b><a href="https://docs.google.com/forms/d/e/1FAIpQLSdc6K5NETueXxguSdynuA4fHhzJjHYuT22-qPzBNMRnfd_pNw/closedform">here</a></b>!</p>
-        </div>
         <hr>
         <h1>Tech Talks</h1>
     </main>
