--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="home">
         <img src="Images/AWCLogo.png" alt="AWC logo">
-        <h1>The Association for Women in Computing @ Virginia Tech!</h1>
+        <h1>The Association for Women in Computing @ Virginia Tech</h1>
     </div>
     <main>
         <h1>Welcome to the Association for Women in Computing at Virginia Tech</h1>
