Updated listserv links

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -90,7 +90,7 @@
             </p>
             <div id="email-button">
                 <button><a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSeEVBfv8W_eD6-ge61FeiniT-Qaw10LNzQzOJtvVXIhQ9iMNA/viewform"
+                        href="https://forms.gle/jsLrgL8DmYZsS7f79"
                         target="_blank">Join our mailing list!</a></button>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     Volunteer. We are always participating in several events throughout the campus, and we always need
                     volunteers
                     to represent our club. Stay tuned to our <a
-                        href="https://docs.google.com/forms/d/e/1FAIpQLSeEVBfv8W_eD6-ge61FeiniT-Qaw10LNzQzOJtvVXIhQ9iMNA/viewform"
+                        href="https://forms.gle/jsLrgL8DmYZsS7f79"
                         target="_blank">listserv</a> to learn about the latest opportunities.
                 </li>
                 <li>
