--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <button class="question">How can I stay up to date on what is happening in AWC?</button>
             <div class="answer">
-                <p>Join the AWC <a href="https://docs.google.com/forms/d/e/1FAIpQLSeEVBfv8W_eD6-ge61FeiniT-Qaw10LNzQzOJtvVXIhQ9iMNA/viewform" target="_blank">listerv</a> to hear about upcoming AWC events and check out the AWC <a href="https://linktr.ee/vt_awc" target="_blank">Linktree</a> to connect with us on Instagram and Discord!</p>
+                <p>Join the AWC <a href="https://forms.gle/jsLrgL8DmYZsS7f79" target="_blank">listserv</a> to hear about upcoming AWC events and check out the AWC <a href="https://linktr.ee/vt_awc" target="_blank">Linktree</a> to connect with us on Instagram and Discord!</p>
             </div>
         </div>
         <br><br><br>
