--- a/HTML/officers.html
+++ b/HTML/officers.html
@@ -25,123 +25,99 @@
     </div>
 
     <header>
-        <h2>2023-2024 Officer Board</h2>
+        <h2>2024-2025 Officer Board</h2>
     </header>
     <main>
         <h1>Meet the Team!</h1>
         <div class="layout">
             <div class="card">
-                <img src="../Images/Leadership/shreya-k.png" alt="shreya-k" style="height: 175px;">
+                <img src="../Images/Leadership/varsha-m.png" alt="varsha-m" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Shreya Kodali</b><br>President</p>
+                    <p><b>Varsha Manickam</b><br>President</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/ruwaa-a.png" alt="ruwaa-a" style="height: 175px;">
+                <img src="../Images/Leadership/shreya-t.png" alt="shreya-t" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Ruwaa Abu-Ageel</b><br>Vice President</p>
+                    <p><b>Shreya Thothathri</b><br>Vice President</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/travis-c.png" alt="travis-c" style="height: 175px;">
+                <img src="../Images/Leadership/olivia-c.png" alt="olivia-c" style="height: 100%; width: 100%;">
+                <div class="info">
+                    <p><b>Olivia Chan</b><br>CAMEO</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="../Images/Leadership/travis-c.png" alt="travis-c" style="height: 100%; width: 100%;">
                 <div class="info">
                     <p><b>Travis Chan</b><br>Webmaster</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/ishita-g.png" alt="ishita-g" style="height: 175px;">
+                <img src="../Images/Leadership/anya-b.png" alt="anya-b" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Ishita Gupta</b><br>Webmaster</p>
+                    <p><b>Anya Beichner</b><br>Advertising</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/olivia-c.png" alt="olivia-c" style="height: 175px;">
+                <img src="../Images/Leadership/mary-z.png" alt="mary-z" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Olivia Chan</b><br>Public Relations Co-Chair</p>
+                    <p><b>Mary Zeno</b><br>Conference</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/sara-a.png" alt="sara-a" style="height: 175px;">
+                <img src="../Images/Leadership/shivani-k.png" alt="shivani-k" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Sara Abbas</b><br>Public Relations Co-Chair</p>
+                    <p><b>Shivani Kumar</b><br>Graduate Outreach</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/shivani-v.png" alt="shivani-v" style="height: 175px;">
+                <img src="../Images/Leadership/sreenidhi-t.png" alt="sreenidhi-t" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Shivani Vaddepalli</b><br>Public Relations Co-Chair</p>
+                    <p><b>Sreenidhi Tadigadapa</b><br>SEC</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/vivien-p.png" alt="vivien-p" style="height: 175px;">
+                <img src="../Images/Leadership/swathi-v.png" alt="swathi-v" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Vivien Peng</b><br>HackViolet Co-Chair</p>
+                    <p><b>Swathi Vijayakumar</b><br>Design</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/haritha-c.png" alt="haritha-c" style="height: 175px;">
+                <img src="../Images/Leadership/hafsa-k.png" alt="hafsa-k" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Haritha Chode</b><br>HackViolet Co-Chair</p>
+                    <p><b>Hafsa Khan</b><br>HackViolet</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/abia-z.png" alt="abia-z" style="height: 175px;">
+                <img src="../Images/Leadership/tessa-r.png" alt="tessa-r" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Abia Zahir</b><br>Women in Computing Day Co-Chair</p>
+                    <p><b>Tessa Ryan</b><br>HackViolet</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/nethra-r.png" alt="nethra-r" style="height: 175px;">
+                <img src="../Images/Leadership/aastha-p.jpeg" alt="aastha-p" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Nethra Rajeshkumar</b><br>Women in Computing Day Co-Chair</p>
+                    <p><b>Aastha Paranthaman</b><br>Social Media</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/prapti-s.png" alt="prapti-s" style="height: 175px;">
+                <img src="../Images/Leadership/no-photo.png" alt="ishita-j" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Prapti Singh</b><br>Treasurer</p>
+                    <p><b>Ishita Jain</b><br>Women In Computing Day</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/varsha-m.png" alt="varsha-m" style="height: 175px;">
+                <img src="../Images/Leadership/no-photo.png" alt="sara-a" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Varsha Manickam</b><br>Treasurer</p>
+                    <p><b>Sara Abbas</b><br>Treasurer</p>
                 </div>
             </div>
             <div class="card">
-                <img src="../Images/Leadership/tanisi-t.png" alt="tanisi-t" style="height: 175px;">
+                <img src="../Images/Leadership/no-photo.png" alt="vee-p" style="height: 100%; width: 100%;">
                 <div class="info">
-                    <p><b>Tanisi Tripathi</b><br>SEC Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/krish-g.png" alt="krish-g" style="height: 175px;">
-                <div class="info">
-                    <p><b>Krish Ganotra</b><br>Conference Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/mary-z.png" alt="mary-z" style="height: 175px;">
-                <div class="info">
-                    <p><b>Mary Zeno</b><br>Conference Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/nandini-y.png" alt="nandini-y" style="height: 175px;">
-                <div class="info">
-                    <p><b>Nandini Yella</b><br>Outreach Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/shivani-k.png" alt="shivani-k" style="height: 175px;">
-                <div class="info">
-                    <p><b>Shivani Kumar</b><br>Conference Co-Chair</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="../Images/Leadership/hafsa-k.png" alt="hafsa-k" style="height: 175px;">
-                <div class="info">
-                    <p><b>Hafsa Khan</b><br>CAMEO Chair</p>
+                    <p><b>Vee Pettit</b><br>Women In Computing Day</p>
                 </div>
             </div>
         </div>
